syntax = "proto3";
package my.proto.package;

message MousePositionMessage
{
	int32 x = 1;
	int32 y = 2;
}
